style.css
/* ... */
.spotify-banner{
  background-image:url("img/rooms-banner.jpg");
}


.homeless-banner{
  background-image:url("img/homies-banner.jpg");
}

.hack-club-banner{
  background-image:url("img/hack-club.jpg");
}

.graphic-design-banner{
  background-image:url("img/design-banner.jpg");
}

.project-heading{
  line-height: normal;
  margin-top:5%;
  text-align: center;
}

.project-heading > #include-page {
  color: #1BBE9C;
}

.project-heading > #spotify-page {
  color: #27B954;
}

.project-heading > #homeless-page {
  color: black;
}

.project-heading > #hack-club-page {
  color: #E42D44;
}

.project-heading > h1{
  font-size: 40px;
  line-height: .5;
}

.project-heading > h2 > a{
  color: #2698EC;
}

.project-heading > h3{
  color: #B2B2B2;
}


.project-body-text{
  line-height: 1.5;
  /* border: solid 2px red; */
  /* margin-top:5%; */
  font-size: 18px;
  margin-left: 25%;
  margin-right: 25%;
  margin-bottom: 5%;
}

.project-body-text ul{
  margin-left: 5%;
  color: #B3B3B3;
}

.project-body-text > h2{
  margin-top:5%;
}

.project-body-text > p{
  margin-left: 5%;
  margin-right: 5%;
  color: #B3B3B3;
}


.project-body-text > .demo > .demo-text > p{
  color: #B3B3B3;
}

.project-body-text > h3{
  margin-left: 5%;
  margin-right: 5%;
  width: 100%;
}


.demo-text{
  flex-direction: column;
  margin-right: 10%;
  width: 40%;
}


.demo{
  display: flex;
  flex-direction: row;
  /* background-color: red; */
  justify-content: center;
  width: 100%;
  align-items: center;
  margin-bottom: 5%;
}


.image{
  /* position: relative; */
  /* text-align: center; */
  margin-bottom: 5%;
  text-align: center;
  color: #B3B3B3;
}

.image > img{
  display: block;
  margin: auto;
}

.rooms-links-container{
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  vertical-align: center;
  text-align: center;
  width: 100%;
}

.rooms-links-container > .rooms-links{
  /* position: absolute; */
  width: 220px;
  color: #27b954;
  align-items: center;

  border: #27b954 2px solid;

  /* background-color: #EBEBEB; */
  transition: 0.3s;
}

.rooms-links-container > .rooms-links:hover{
  color:white;
  background-color: #27b954;
}

/* Graphic Design Page */
.image-gallery{
  /* background-color: red; */
  display: flex;
  justify-content: center;
  flex-direction: row;
  flex-wrap: wrap;
}

.image-gallery > .cities{
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: center;
}


.cities > img{
  width: 450px;
  padding: 20px;
}


.image-gallery img{
  width: 450px;
  padding: 20px;
}

.project-body-text > .image-gallery > p{
  font-size: 5px;
  margin-top:0px;
}

@media only screen and (min-width: 1500px) {
  .project-description{
    width: 700px;
  }

  .project > img{
    width: 700px;
  }

  .about-me-text{
    font-size: 18px;
  }

  #pic{
    display: block;
    max-height: 550px;
    /* max-width: auto; */
  }
}

@media only screen and (max-width: 1300px) {
  .project-position{
    /* border: solid 2px red; */
    flex-direction: column;
  }

    #pic{
    height: 350px;
  }
  .project > img{
    /* width: 500px; */
    width: 60%;
    height: auto;
    margin: auto;
  }
  .about-me-wrapper{
    margin-bottom: 100px;
  }
}


@media only screen and (max-width: 1200px) {


  .name{
    margin-top:40%;
    text-align: left;
    margin-left: 0;
    width: 160%;
    /* display: none; */
  }

  .description{
    margin-top:0px;
    font-size:40px;
  }

  .button{
    margin-top: 20%;
    margin-bottom: 40%;
  }

  .text-wrapper{
    /* top:40%; */
    top:10%;
    width:200px;
  }

  .experience-header{
    margin-top: 0px;
  }

  .experience-wrapper{
    flex-direction: column;
  }


  .project{
    width: 100%;
    /* border: solid 2px blue; */
    flex-direction: column;
  }

  .project-description{
    width: 80%;
    /* border: solid 2px red; */
    margin: auto !important;
  }

  .project > img{
    /* width: 500px; */
    width: 80%;
    height: auto;
    margin: auto;
  }
}


@media only screen and (max-width: 1000px) {

  /* About Me Page */
  .about-me-wrapper{
    justify-content: center;
    flex-direction: column;
  }
  .about-me-text{
    width: 100%;
  }


  #pic{
    display: flex;
    justify-content: center;
    width:400px;
    height: 400px;
  }

  /* Spotify Rooms */
  .demo{
    flex-direction: column;
  }

  .demo-text{
    width: 100%;
    margin-left: 10%;
  }

  .demo > video{
    margin-bottom: 10%;
  }
}

@media only screen and (max-width: 750px) {
  .background{
  /* right:0;
  width: 60%; */
    display: none;
  }

  .profile{
    display: none;
  }

  .project-body-text{
    margin: 10%;
  }


  /* Graphic Design */
  .image-gallery {
    flex-direction: column;
  }

  .image-gallery img{
    height: auto;
    width: 325px;
    display: block;
  }
}
/* ... */

